hidden class for clearAll button added, names of  some variables changed for better readability, added useCallbacks and React.memo to avoid unneccessary renderign of TodoTasks and ErrorMessage comps

--- a/src/styles/todoapp.scss
+++ b/src/styles/todoapp.scss
@@ -129,5 +129,12 @@
     &:active {
       text-decoration: none;
     }
+
+    &.hidden {
+      min-height: 0;
+      opacity: 0;
+      pointer-events: none;
+    }
   }
+
 }
